plugins {
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'

    //Flyway plugin so that it can be run as gradle configuration
    // note: plugin is required for creation of Gradle configuration in IntelliJ for lunching Flyway migrations
    // it is also necessary to set into env.variables of this configuration following 4 varibles (directly, not into app.properties): FLYWAY_URL, FLYWAY_USER, FLYWAY_PASSWORD, FLYWAY_SCHEMAS
    // then it is possible to run these migrations using created gradle configuration
    id "org.flywaydb.flyway" version "12.0.2"
}

group = 'com.example'
version = 'latest'
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.json:json:20250107'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'

    //Postgres DB
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}